@@ -24,8 +24,6 @@
 #include "common.h"
 #include "db.h"
 
-extern	int	CONFIG_NODEID;
-
 void	op_template_add(DB_EVENT *event, DB_ACTION *action, DB_OPERATION *operation);
 void	op_template_del(DB_EVENT *event, DB_ACTION *action, DB_OPERATION *operation);
 void	op_group_add(DB_EVENT *event, DB_ACTION *action, DB_OPERATION *operation);
