@@ -25,8 +25,6 @@
 #include "log.h"
 #include "sysinfo.h"
 
-extern  int     CONFIG_NODEID;
-
 extern	int	get_value_aggregate(DB_ITEM *item, AGENT_RESULT *result);
 
 #endif
