@@ -26,7 +26,6 @@ extern  int     server_num;
 extern  int     CONFIG_TIMEOUT;
 extern  int     CONFIG_POLLER_FORKS;
 extern  int     CONFIG_UNREACHABLE_POLLER_FORKS;
-extern  int     CONFIG_REFRESH_UNSUPPORTED;
 extern  int     CONFIG_UNAVAILABLE_DELAY;
 extern  int     CONFIG_UNREACHABLE_PERIOD;
 extern  int     CONFIG_UNREACHABLE_DELAY;
